<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/iw"
            android:src="@drawable/kgk_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/image_description"/>

        <Button
            android:id="@+id/button_marks"
            android:layout_below="@id/iw"
            android:text="@string/button_marks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_below="@id/button_marks"
            android:id="@+id/button_substitution"
            android:text="@string/button_substitution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/button_timetable"
            android:text="@string/button_timetable"
            android:layout_below="@id/button_substitution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_moodle"
            android:text="@string/button_moodle"
            android:layout_below="@id/button_timetable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_canteen"
            android:text="@string/button_canteen"
            android:layout_below="@id/button_moodle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_website"
            android:layout_below="@id/button_canteen"
            android:text="@string/button_official_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </RelativeLayout>
</RelativeLayout>
